code/tui/src/app/snapshots/app__network_tests__network_config_entry.snap
---
source: code/tui/src/app/network_tests.rs
expression: "render(&app, 100, 24)"
---
  .                                                                            [— / —] [Dashboard]

            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │   General    Providers    Issues    Network                             │
            │                                                                         │
            │  ╭────────────────────────────────────────────────────────────────────╮ │
            │  │ Search configuration                                               │ │
            │  ╰────────────────────────────────────────────────────────────────────╯ │
            │> Run network diagnostics                                                │
            │  Required domains                                                       │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────│  Enter/Space change · Tab tabs · / search · Esc close                   │───────────
  > Build an└─────────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
