code/tui/src/app/snapshots/app__network_tests__network_diagnostics_loading.snap
---
source: code/tui/src/app/network_tests.rs
expression: "render(&app, 100, 24)"
---
  .                                                                                    [Dashboard]

            ┌── Config › Network ─────────────────────────────────────────────────[✗]─┐
            │                                                                         │
            │> Checking configured services…                                          │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
  ──────────│  Esc to return                                                          │───────────
  > Build an└─────────────────────────────────────────────────────────────────────────┘
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
