code/tui/src/app/snapshots/app__network_tests__network_required_domains_chinese_inline.snap
---
source: code/tui/src/app/network_tests.rs
expression: screen
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘







─ 配置 › 网络 ──────────────────────────────────────────────────────────────────────────────────────

> 刷新所需域名
  复制所需域名

  Example ────────────────────────────────────────────────────────────────────────────────────────
  模型服务: api.example.test:443
  代理：proxy.example.test:8080
  用量服务: usage.example.test:443
  直连

  Enter 确认  ·  Esc 返回  ·  r 刷新
